add Application Insights

--- a/eShopOnWeb/src/PublicApi/appsettings.json
+++ b/eShopOnWeb/src/PublicApi/appsettings.json
@@ -11,9 +11,14 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
-      "Microsoft": "Warning",
-      "System": "Warning"
+      "Default": "Information",
+      "Microsoft": "Information",
+      "System": "Information"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     },
     "AllowedHosts": "*"
   },
