--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -17,5 +17,6 @@
     },
     "AllowedHosts": "*"
   },
-  "ASPNETCORE_ENVIRONMENT": "Development"
+  "ASPNETCORE_ENVIRONMENT": "Development",
+  "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg=="
 }
