--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -18,5 +18,6 @@
     "AllowedHosts": "*"
   },
   "ASPNETCORE_ENVIRONMENT": "Development",
-  "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg=="
+  "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg==",
+  "OrderDeliveryServiceUrl": "https://eshop-fucnapp.azurewebsites.net/api/OrderItemsForDelivery?code=cIk6GuWK3QHujEOyTXqgYZWCGLBQabGacW3Mvf23V6gizqzuVgsgbw=="
 }
