--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -4,7 +4,8 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "CatalogConnectionOld": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "CatalogConnection": "",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
@@ -18,5 +19,7 @@
     "AllowedHosts": "*"
   },
   "ASPNETCORE_ENVIRONMENT": "Development",
-  "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg=="
+  "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg==",
+  "KeyVaultName": "eshop-KeyVault",
+  "VaultUriTemplate": "https://{0}.vault.azure.net/"
 }
