--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -4,8 +4,7 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnectionOld": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "CatalogConnection": "",
+    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
@@ -21,5 +20,7 @@
   "ASPNETCORE_ENVIRONMENT": "Development",
   "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg==",
   "KeyVaultName": "eshop-KeyVault",
-  "VaultUriTemplate": "https://{0}.vault.azure.net/"
+  "VaultUriTemplate": "https://{0}.vault.azure.net/",
+  "ServiceBusConnectionString": "Endpoint=sb://eshopns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=QCN0Ib2iXBGDSBpBjl68xNKy4QxSNyaq8rhUfHiWj6w=",
+  "QueueName": "eshoporderqueue"
 }
