--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -4,7 +4,7 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
+    "CatalogConnection": "Server=tcp:eshoponweb-server.database.windows.net,1433;Initial Catalog=eshop-db;Persist Security Info=False;User ID=ko_guy;Password=Ko123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
