--- a/eShopOnWeb/src/Web/appsettings.json
+++ b/eShopOnWeb/src/Web/appsettings.json
@@ -4,7 +4,7 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=tcp:eshoponweb-server.database.windows.net,1433;Initial Catalog=eshop-db;Persist Security Info=False;User ID=ko_guy;Password=Ko123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "CatalogConnection": "Server=tcp:eshoponwebdbsrvr.database.windows.net,1433;Initial Catalog=eshopDB;Persist Security Info=False;User ID=ko_guy;Password=Ko123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
   },
   "CatalogBaseUrl": "",
@@ -21,6 +21,7 @@
   "OrderItemsReserverUrl": "https://eshop-funcapp.azurewebsites.net/api/OrderItemsReserver?code=/wdkrmuUby6umdc5M2epJ5EGNifTBADhncv7mPo0A54GsA06WOREMg==",
   "KeyVaultName": "eshop-KeyVault",
   "VaultUriTemplate": "https://{0}.vault.azure.net/",
-  "ServiceBusConnectionString": "Endpoint=sb://eshopns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=QCN0Ib2iXBGDSBpBjl68xNKy4QxSNyaq8rhUfHiWj6w=",
-  "QueueName": "eshoporderqueue"
+  "ServiceBusConnectionString": "Endpoint=sb://eshoponwebsb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SOMVFbnmDqH5CMdypUUvh947vPXe6dsLtrZWaTUfORU=",
+  "QueueName": "eshoporderqueue",
+  "OrderDeliveryServiceUrl": "https://eshop-funcs.azurewebsites.net/api/OrderItemsForDelivery?code=dAho3fJ1RfhpIEwqOr-cUTARDU9I9mnD4SgntPs0NMsIAzFuS6ipjQ=="
 }
